# VCraft

./: .gitignore  CMakeLists.txt  README.md
shaders/: closesthit.rchit  mesh.frag  mesh.vert  miss.rmiss  raygen.rgen  sky.frag  sky.vert  ui.frag  ui.vert  vertex_lighting.comp  vertex_lighting_simple.comp
src/: camera.cpp  camera.h  console.cpp  console.h  engine.cpp  engine.h  input.cpp  input.h  main.cpp  player.cpp  player.h  raytracing.cpp  raytracing.h  renderer.cpp  renderer.h  texture.cpp  texture.h  ui_overlay.cpp  ui_overlay.h  world.cpp  world.h
